--- a/VKMusic/Application/View/Base.lproj/Main.storyboard
+++ b/VKMusic/Application/View/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ULE-xZ-F37">
-    <device id="retina3_5" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,11 +15,11 @@
             <objects>
                 <viewController storyboardIdentifier="StartVC" id="ULE-xZ-F37" customClass="ViewController" customModule="VKMusic" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nSi-6b-ajm">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wp7-x6-usQ">
-                                <rect key="frame" x="60" y="379" width="200" height="30"/>
+                                <rect key="frame" x="60" y="566" width="255" height="30"/>
                                 <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Войти">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -44,6 +44,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Xf-DY-pim" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="dUX-7U-mFo"/>
             </objects>
             <point key="canvasLocation" x="6569" y="41"/>
         </scene>
@@ -52,18 +53,18 @@
             <objects>
                 <viewController storyboardIdentifier="MusicVC" id="EtV-Ih-EgX" customClass="MusicPlayerViewController" customModule="VKMusic" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dZc-VN-mlc">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Iq9-3s-p1p">
-                                <rect key="frame" x="0.0" y="283" width="320" height="197"/>
+                                <rect key="frame" x="0.0" y="283" width="375" height="384"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="70" id="kzv-yy-wsg" customClass="MusicTableViewCell" customModule="VKMusic" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="320" height="70"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="70" id="kzv-yy-wsg" customClass="MusicTableViewCell" customModule="VKMusic" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kzv-yy-wsg" id="j6K-yM-dNJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="69.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="69.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="albumImage" translatesAutoresizingMaskIntoConstraints="NO" id="b4K-WP-sf2">
@@ -72,6 +73,13 @@
                                                         <constraint firstAttribute="width" secondItem="b4K-WP-sf2" secondAttribute="height" multiplier="1:1" id="Q1B-17-Gpy"/>
                                                     </constraints>
                                                 </imageView>
+                                                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wP1-5e-tG6" customClass="ESTMusicIndicatorView" customModule="ESTMusicIndicator">
+                                                    <rect key="frame" x="10" y="10" width="49.5" height="49.5"/>
+                                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="wP1-5e-tG6" secondAttribute="height" multiplier="1:1" id="gxt-Hm-gWc"/>
+                                                    </constraints>
+                                                </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oqh-ah-IHZ">
                                                     <rect key="frame" x="67" y="10" width="28" height="12"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="10"/>
@@ -91,13 +99,17 @@
                                                 <constraint firstItem="qTp-ka-bbJ" firstAttribute="top" secondItem="Oqh-ah-IHZ" secondAttribute="bottom" constant="5" id="6hv-ty-Mrz"/>
                                                 <constraint firstItem="Oqh-ah-IHZ" firstAttribute="top" secondItem="j6K-yM-dNJ" secondAttribute="top" constant="10" id="9B8-ra-wIQ"/>
                                                 <constraint firstItem="Oqh-ah-IHZ" firstAttribute="leading" secondItem="b4K-WP-sf2" secondAttribute="trailing" constant="7.5" id="EEh-Jz-8Np"/>
+                                                <constraint firstItem="wP1-5e-tG6" firstAttribute="top" secondItem="j6K-yM-dNJ" secondAttribute="top" constant="10" id="fAu-Wz-LVs"/>
                                                 <constraint firstItem="qTp-ka-bbJ" firstAttribute="leading" secondItem="b4K-WP-sf2" secondAttribute="trailing" constant="7.5" id="nzP-Zd-lBW"/>
+                                                <constraint firstAttribute="bottom" secondItem="wP1-5e-tG6" secondAttribute="bottom" constant="10" id="phn-Ot-F3T"/>
                                                 <constraint firstItem="b4K-WP-sf2" firstAttribute="leading" secondItem="j6K-yM-dNJ" secondAttribute="leading" constant="10" id="rPg-j6-fnz"/>
+                                                <constraint firstItem="wP1-5e-tG6" firstAttribute="leading" secondItem="j6K-yM-dNJ" secondAttribute="leading" constant="10" id="wCu-GG-mWj"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="albumImageView" destination="b4K-WP-sf2" id="ofq-OB-3cn"/>
                                             <outlet property="artistLabel" destination="qTp-ka-bbJ" id="jTQ-qs-Sov"/>
+                                            <outlet property="musicESIndicator" destination="wP1-5e-tG6" id="ml5-q9-a0M"/>
                                             <outlet property="nameMusicLabel" destination="Oqh-ah-IHZ" id="rdq-CP-SaY"/>
                                         </connections>
                                     </tableViewCell>
@@ -131,7 +143,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5" minValue="0.0" maxValue="50" translatesAutoresizingMaskIntoConstraints="NO" id="qrj-Ie-y82" customClass="CustomMusicSlider" customModule="VKMusic" customModuleProvider="target">
-                                <rect key="frame" x="14" y="147" width="292" height="31"/>
+                                <rect key="frame" x="14" y="147" width="347" height="31"/>
                                 <color key="minimumTrackTintColor" red="0.0" green="0.50226561680000004" blue="0.85648001269999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="maximumTrackTintColor" red="0.0" green="0.58980089430000004" blue="1" alpha="0.748046875" colorSpace="custom" customColorSpace="sRGB"/>
                                 <userDefinedRuntimeAttributes>
@@ -144,7 +156,7 @@
                                 </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DIQ-Ig-WJp">
-                                <rect key="frame" x="250" y="218" width="50" height="50"/>
+                                <rect key="frame" x="305" y="218" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="DDe-g8-khk"/>
                                     <constraint firstAttribute="height" constant="50" id="a3w-x6-4xi"/>
@@ -161,13 +173,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2:31" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CSS-dm-G9p">
-                                <rect key="frame" x="280" y="184" width="24" height="15"/>
+                                <rect key="frame" x="335" y="184" width="24" height="15"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Day-Is-AIb">
-                                <rect key="frame" x="260" y="84" width="40" height="40"/>
+                                <rect key="frame" x="315" y="84" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="PBg-gm-F15"/>
                                     <constraint firstAttribute="height" constant="40" id="ZDh-dI-kmd"/>
@@ -178,7 +190,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eLn-vJ-t9v">
-                                <rect key="frame" x="135" y="218" width="50" height="50"/>
+                                <rect key="frame" x="162.5" y="218" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="05Z-lY-J3L"/>
                                     <constraint firstAttribute="width" constant="50" id="SEw-J0-cbT"/>
@@ -246,16 +258,16 @@
             </objects>
             <point key="canvasLocation" x="8776.875" y="800"/>
         </scene>
-        <!--Dialogs Collection View Controller-->
+        <!--Dialog Collection View Controller-->
         <scene sceneID="Rgu-aY-KDT">
             <objects>
-                <viewController storyboardIdentifier="dialogCV" id="HqU-KZ-clR" customClass="DialogsCollectionViewController" customModule="VKMusic" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="dialogCV" id="HqU-KZ-clR" customClass="DialogCollectionViewController" customModule="VKMusic" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fsI-19-l6w">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="YL1-AG-hFp">
-                                <rect key="frame" x="0.0" y="87" width="320" height="393"/>
+                                <rect key="frame" x="0.0" y="87" width="375" height="580"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="3" id="l7l-Dm-x62">
                                     <size key="itemSize" width="77" height="84"/>
@@ -319,13 +331,13 @@
                                 </connections>
                             </collectionView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Выберите чаты" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MFi-v1-Ijo">
-                                <rect key="frame" x="108.5" y="52" width="103" height="17"/>
+                                <rect key="frame" x="136" y="52" width="103" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Отправить" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GQY-GJ-Wm6">
-                                <rect key="frame" x="117" y="28" width="86" height="21"/>
+                                <rect key="frame" x="144.5" y="28" width="86" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -339,7 +351,7 @@
                                 <state key="normal" image="searchDialogImage"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RDG-eb-qT5">
-                                <rect key="frame" x="260" y="31" width="40" height="40"/>
+                                <rect key="frame" x="315" y="31" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="RDG-eb-qT5" secondAttribute="height" multiplier="1:1" id="XGq-vk-1US"/>
                                     <constraint firstAttribute="height" constant="40" id="gbG-xZ-hss"/>
@@ -380,7 +392,7 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="ZE3-3y-7nm"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="L2v-eg-o4Y">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -395,7 +407,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PRA-Dl-el4" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="WDK-MP-bGC">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
